nit: sonar issue
Signed-off-by: Yanko Nikolov <nikolovqnko@gmail.com>